[tool.poetry]
name = "langgraph-chatbot"
version = "0.1.0"
description = ""
authors = ["itskylechung <makbokkpro2033@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.74"
langchain-core = "^0.3.39"
python-dotenv = "^1.0.1"
langchain = {extras = ["openai"], version = "^0.3.20"}
pydantic = "^2.10.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
